plugins {
	id 'net.fabricmc.fabric-loom' version "${loom_version}"
	id 'maven-publish'
}

base {
	archivesName = project.archives_base_name
}
version = "mc${project.supported_versions}-v${project.mod_version}"
group = project.maven_group

repositories {
	// Add repositories to retrieve artifacts from in here.
	// You should only use this when depending on other mods because
	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
	// for more information about repositories.
	maven {
		url = "https://api.modrinth.com/maven"
	}
}

dependencies {
	// To change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	implementation "net.fabricmc:fabric-loader:${project.loader_version}"

	// Fabric API. This is technically optional, but you probably want it anyway.
	implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

	implementation "maven.modrinth:midnightlib:${project.midnightlib_version}"
	include "maven.modrinth:midnightlib:${project.midnightlib_version}"
}

processResources {
	inputs.property "mod_version", project.mod_version

	filesMatching("fabric.mod.json") {
		expand "mod_version": project.mod_version
	}

	def changelogFormatText = file("docs/changelogs/format.md").text.trim()
	def changelogText = file("docs/changelogs/${project.mod_version}.md").text.trim()
	def lastVersion = changelogText.split("\n")[0].split("=")[1].trim()
	def changelog = changelogFormatText
			.replace("%changelog%", changelogText)
			.replace("%version%", project.mod_version)
			.replace("%mc_versions%", project.supported_versions)
			.replace("%last_version%", lastVersion)
	StringBuilder changelogBuilder = new StringBuilder()
	for (String line : changelog.split("\n")) {
		if (!line.startsWith("!"))
			changelogBuilder.append(line).append("\n")
	}
	def buildDirFile = rootProject.layout.buildDirectory.get().asFile
	if (!buildDirFile.exists()) buildDirFile.mkdirs()
	new File(buildDirFile, "CHANGELOG.md").text = changelogBuilder.toString().trim()
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 25
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_25
	targetCompatibility = JavaVersion.VERSION_25
}

jar {
	from("LICENSE") {
		rename { "${it}_${project.archives_base_name}"}
	}
}

// configure the maven publication
publishing {
	publications {
		mavenJava(MavenPublication) {
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}
